# Ohjelmistotekniikka

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  search.html
minigolf-game/: .coveragerc  .env  .env.test  .pylintrc  db.sqlite  pyproject.toml  tasks.py
minigolf-game/data/: test_db.sqlite
minigolf-game/src/: ball.py  ball_handler.py  clock.py  config.py  db_connection.py  db_handler.py  element.py  field.py  field_two.py  game.py  index.py  initialize_db.py  main.py  menu.py  renderer.py  score_repository.py  shot_counter.py  walls.py
minigolf-game/src/entities/: aim_line.py  ball.py  element.py  field.py
minigolf-game/src/field_elements/: aim_line.py  ball.py  element.py  field.py
minigolf-game/src/levels/: field_four.py  field_importer.py  field_one.py  field_three.py  field_two.py
minigolf-game/src/misc/: colorscheme.txt
minigolf-game/src/repositories/: score_repository.py
minigolf-game/src/services/: ball_handler.py  clock.py  game.py  main.py  renderer.py  shot_counter.py  walls.py
minigolf-game/src/services/database/: db_connection.py  initialize_db.py
minigolf-game/src/services/game/: clock.py  game.py
minigolf-game/src/tests/: aimline_test.py  ball_handler_test.py  ball_test.py  element_test.py  field_test.py  shot_counter_test.py  walls_test.py
minigolf-game/src/tests/entities/: ball_test.py  field_test.py
minigolf-game/src/tests/repositories/: score_repository_test.py
minigolf-game/src/tests/services/: shot_counter_test.py
minigolf-game/src/ui/: end_screen.py  menu.py  score.py  score_table.py  score_viewer.py
(+25 files in other folders)
