[tool.poetry]
name = "minigolf-game"
version = "0.1.0"
description = "A game of minigolf"
authors = ["Markus Kaihola <markus.kaihola@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"
autopep8 = "^1.5.6"
pygame = "^2.0.1"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
coverage = "^5.5"
pytest = "^6.2.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "visual: tests that require a pygame display",
  "nonvisual: tests that do not require a pygame display",
]
env_files = ".env.test"